--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <section class="home">
         <div class="home-img">
-            <img src="IMG_20240410_101349.jpg" alt="">
+            <img src="Pic 1.png" alt="">
         </div>
         <div class="home-content">
             <h1>Hi, It's <span>Umar</span></h1>
