--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <p>CS Student 2nd Year</p>
             <p>I can build Any website you want</p>
             <div class="social-icons">
-                <a href="https://www.facebook.com/" class="fa-facebook fa-brands">F</a>
-                <a href="https://www.instagram.com/_am_umar248/" class="insta-brands">I</a>
+                <a href="https://www.facebook.com/Muhammad.Farooq.174" class="fa-facebook fa-brands">F</a>
+                <a href="https://www.instagram.com/devguy_248/" class="insta-brands">I</a>
             </div>
             <a href="#" class="btn">Hire Me</a>
         </div>
